--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
     min-height: 35rem;
     color: white;
 
-    padding: 16.5rem 0;
+    padding: 14rem 0;
     background: url("img/headbg.png");
     background-position: center 50%;
 
@@ -177,7 +177,23 @@ body {
 
 }
 
+.content-right{
+    position: relative;
+    width: 50%;
+    height: 125%;
+    left: 50%;
 
+    top: -160px;
+    /* background-color: #fff; */
+ background-image: url('img/chin3.jpg');
+ background-size: cover;
+background-position:center;
+ background-repeat: no-repeat;
+    z-index: 30;
+    transform: scale(1);
+    transition: 0.1s ease;
+
+}
 
 .headrightside {
     position: absolute;
@@ -198,6 +214,39 @@ body {
     z-index: 99;
 }
 
+.chinTitle{
+    margin-top: -10% !important;
+    font-family: "Roboto";
+    font-weight: bold;
+    letter-spacing: 0.15em;   
+}
+.ar-text{
+  position: relative;
+top: -800px;
+}
+.sparkar-section a,.sparkar-section .arBtn{
+    
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-family: "Cocogoose";
+    line-height: 5em;
+    border-width: 2px;
+    width: 200px;
+    height: 100px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 0px;
+
+}
+
+.sparkar-section a:hover,.arBtn:hover{
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(0, 0, 0);
+    border-width: 2px;
+    border-radius:0px;
+    box-shadow: 2px 4px 5px rgb(0, 0, 0); ;
+    
+}
 .bunnyH span {
 
     font-family: 'Roboto';
@@ -317,6 +366,7 @@ body {
     background-color: white;
     border-color: red;
     border-width: 2px;
+    box-shadow: 2px 4px 5px rgb(255, 0, 0) ;
 }
 
 .port-section a:hover {
@@ -334,7 +384,20 @@ body {
     padding: 2rem;
 }
 
+.sparkar-section {
+    padding-top: 10rem;
+    height: 800px;
+    background: url("img/chin2.png");
+    background-position: center;
 
+    background-repeat: no-repeat;
+
+    background-size: cover;
+}
+.btnARgp{
+    margin-top: 20%;
+    margin-left: 100% !important;
+}
 
 .contact-section {
     background-color: #1a1a1a !important;
@@ -420,9 +483,11 @@ body {
     border-radius: 50px;
     text-align: center;
     box-shadow: 2px 2px 3px #999;
+    z-index: 999;
 }
 
 .float1 {
+    z-index: 999;
     position: fixed;
     width: 60px;
     height: 60px;
@@ -442,3 +507,39 @@ body {
 @media only screen and (max-width: 600px) {}
 
 @media only screen and (max-width: 768px) {}
+
+.mockup{
+    
+
+    padding-top: 12%;
+    margin-left: 55%;
+    z-index: 999;
+}
+/* Mock up */
+.iphone-wrap {
+    margin-left: 31px;
+    position: relative;
+    display: block;
+    width: 100%;
+  }
+  
+  .iphone {
+    width: 280px;
+    position: absolute;
+    display: block;
+    z-index: 1;
+  }
+  
+  .mcvideo {
+    margin-left: 46px;
+    margin-top: 40px;
+    width: 250px;
+    position: relative;
+  }.video-wrapper {
+ 
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    padding: 155px 0;
+    position: relative;
+  }
