--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html {
     scrollbar-width: none;
     -ms-overflow-style: none;
 }
+
+
 @-moz-document url-prefix() {
     /* Disable scrollbar Firefox */
     html {
@@ -111,7 +113,7 @@ body {
 
 .main h1,
 .main .h1 {
-
+    display: hidden !important;
     font-family: 'CocogooseSemi';
     font-style: normal;
     font-weight: 300;
@@ -223,6 +225,26 @@ background-position:center;
 .ar-text{
   position: relative;
 top: -800px;
+}
+.btn.downloadBtn:hover{
+    color: rgb(0, 0, 0) !important;
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(0, 0, 0);
+    border-width: 2px;
+    border-radius:0px;
+    box-shadow: 2px 4px 5px rgb(0, 0, 0); ;
+}
+.btn.downloadBtn{
+    margin-top: 20px;
+    color: rgb(255, 255, 255) !important;
+    text-align: center;
+    font-family: "Cocogoose";
+    line-height: 5em;
+    border-width: 2px;
+    width: 200px;
+    
+    background-color: rgb(0, 0, 0);
+    border-radius: 0px;
 }
 .sparkar-section a,.sparkar-section .arBtn{
     
@@ -452,8 +474,23 @@ top: -800px;
 
 .project-section {
     padding: 5rem 0;
-}
+    background: rgb(228, 228, 228);
 
+}
+.project-section a{
+    text-decoration: none !important;
+}
+.project-section img{
+    
+    box-shadow: 0 1px 10px #0000004d;
+    border-width: 2px ;
+    border-radius: 10px;
+}
+.project-section h2{
+    padding: 5px;
+    font-family: "COCOGOOSE Light";
+    font-size: 25px !important;
+}
 .project-section .featured-text {
     padding: 2rem;
 }
@@ -552,3 +589,6 @@ top: -800px;
       text-align: center;
       height: 100vh;
   }
+.cd-section {
+  height: 100vh;
+}
